--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - lib/assets/
+    - lib/assets/images/
