--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^5.0.0
   font_awesome_flutter: ^10.7.0
   shared_preferences: ^2.0.0
 
