--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   shared_preferences: ^2.0.0
   firebase_core: ^2.30.1
   cloud_firestore: ^4.17.2
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
