--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_core: ^2.30.1
   cloud_firestore: ^4.17.2
   charts_flutter: ^0.12.0
+  firebase_auth: ^4.19.4
+  firebase_database: ^10.5.4
 
 dev_dependencies:
   flutter_test:
