--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   charts_flutter: ^0.12.0
   firebase_auth: ^4.19.4
   firebase_database: ^10.5.4
+  fl_chart: ^0.67.0
 
 dev_dependencies:
   flutter_test:
