--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,14 @@ dependencies:
     sdk: flutter
   provider: ^6.1.2
   font_awesome_flutter: ^10.7.0
-  shared_preferences: ^2.0.0
+  shared_preferences: ^2.2.3
   firebase_core: ^2.30.1
   cloud_firestore: ^4.17.2
   charts_flutter: ^0.12.0
   firebase_auth: ^4.19.4
   firebase_database: ^10.5.4
   fl_chart: ^0.67.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
