--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   firebase_database: ^10.5.4
   fl_chart: ^0.67.0
   path_provider: ^2.1.3
+  flutter_colorpicker: ^1.0.3
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
