--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,15 +17,17 @@ dependencies:
   charts_flutter: ^0.12.0
   firebase_auth: ^4.19.4
   firebase_database: ^10.5.4
-  fl_chart: ^0.67.0
+  fl_chart: ^0.68.0
   path_provider: ^2.1.3
   flutter_colorpicker: ^1.0.3
   http: ^1.2.1
+  url_launcher: ^6.2.6
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.2
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
