--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,15 @@
 sonar.projectKey=JackySeve_PocketMetrics
 sonar.organization=jackyseve
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=PocketMetrics
-#sonar.projectVersion=1.0
+# Nombre y versión que aparecerán en SonarCloud
+sonar.projectName=PocketMetrics
+sonar.projectVersion=1.0
 
+# Ruta de los archivos fuente (ajustar según la estructura de tu proyecto)
+sonar.sources=lib
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+# Codificación de los archivos fuente
+sonar.sourceEncoding=UTF-8
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# URL de SonarCloud (si no la usas en el comando de SonarScanner)
+sonar.host.url=https://sonarcloud.io
