--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,10 +6,30 @@ sonar.projectName=PocketMetrics
 sonar.projectVersion=1.0
 
 # Ruta de los archivos fuente (ajustar según la estructura de tu proyecto)
-sonar.sources=lib
+sonar.sources=lib,pubspec.yaml
+sonar.tests=test
 
 # Codificación de los archivos fuente
 sonar.sourceEncoding=UTF-8
 
 # URL de SonarCloud (si no la usas en el comando de SonarScanner)
 sonar.host.url=https://sonarcloud.io
+
+# Analyzer mode
+# Can be:
+# - DETECT (attempt to detect automatically) - default
+# - MANUAL (an existing report needs to be provided)
+# - FLUTTER (flutter analyze)
+# - DART (dart analyze)
+# - DARTANALYZER (dartanalyzer)
+sonar.dart.analyzer.mode=DART
+
+# Allows reuse of an existing analyzer report when mode is MANUAL
+# sonar.dart.analyzer.report.path=
+
+# Analyzer report output mode
+# Can be:
+# - DETECT (attempt to detect automatically, requires Dart SDK on the PATH) - default
+# - MACHINE (a new machine readable output that is available for Dart 2.12+)
+# - LEGACY (attempts to parse human readable output from dart/flutter) - default
+sonar.dart.analyzer.report.mode=MACHINE
