Feature: Tests and changes for tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=JackySeve_PocketMetrics
 sonar.organization=jackyseve
+sonar.token=a51dd68bb4ca7c4d84cfff6a4622f1ba8d55d47a
 
 # Nombre y versión que aparecerán en SonarCloud
 sonar.projectName=PocketMetrics
@@ -13,3 +14,9 @@ sonar.sourceEncoding=UTF-8
 
 # URL de SonarCloud (si no la usas en el comando de SonarScanner)
 sonar.host.url=https://sonarcloud.io
+
+# Archivos de pruebas
+sonar.tests=test
+
+# Incluir el reporte de cobertura de pruebas
+sonar.dart.coverage.reportPaths=coverage/lcov.info
