--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,13 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.2
-  font_awesome_flutter: ^10.7.0
   shared_preferences: ^2.2.3
-  firebase_core: ^2.30.1
-  cloud_firestore: ^4.17.2
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.3
   charts_flutter: ^0.12.0
-  firebase_auth: ^4.19.4
-  firebase_database: ^10.5.4
-  fl_chart: ^0.68.0
+  firebase_auth: ^5.3.1
+  firebase_database: ^11.1.4
+  fl_chart: ^0.69.0
   path_provider: ^2.1.3
   flutter_colorpicker: ^1.0.3
   http: ^1.2.1
@@ -29,8 +28,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
-  dart_code_metrics: ^4.19.2
+  mockito: ^5.0.16
+  flutter_lints: ^5.0.0
+  test: ^1.25.7
 
 flutter:
   uses-material-design: true
